CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    MESSAGE(FATAL_ERROR "In-source builds not allowed")
ENDIF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})

PROJECT(cpuid_info CXX)

ADD_EXECUTABLE(cpuid_info cpuid_info.cpp)

INSTALL(TARGETS cpuid_info DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
